# rules_proto_grpc

./: aspect.bzl  repositories.bzl
scala/: BUILD.bazel
